fix: Fix style shifting from bold to plain

--- a/app/Themes/Rcac/assets/css/content.css
+++ b/app/Themes/Rcac/assets/css/content.css
@@ -205,7 +205,9 @@ a.btn-info:active {
 	padding: 40px 0;
 	min-height: 500px;
 }
-.contentPage a {
+.contentPage a,
+.contentPage a:hover,
+.contentPage a:focus {
 	font-weight: bold;
 }
 .contentInner {
